article card - display total articles if page is a section

--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -99,6 +99,39 @@ $article-card-hover-brightness: 30%;
 	aspect-ratio: 2/2.5;
 
 
+	.articles-count{
+		position: absolute;
+		z-index: 1;
+		font-weight: 900;
+		// right: 0px;
+		// top: -20px;
+		// padding: 6px 7px;
+		padding-bottom: 20px;
+		padding-right: 10px;
+		padding-left: 10px;
+		padding-top: 10px;
+		top:0px;
+		left:0px;
+		transition-duration: .4s;
+		height: 40px;
+		// background-color: var(--hover-color);
+		// box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+		// opacity: .3;
+		border-radius: 4px;
+		svg, p, span {
+			// opacity: 1.0;
+			display: inline-block;
+			color: var(--text-2-dark);
+			// text-shadow: 2px 2px 2px #0000004f;
+
+			-webkit-filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
+  			filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
+			// text-shadow: 2px 2px 2px var(--hover-color);
+			// text-shadow: 2px 2px 1px var(--hover-color);
+			
+
+		}
+	}
 	.reading-time{
 		// color: pink;
 		// color: transparent;
@@ -121,6 +154,8 @@ $article-card-hover-brightness: 30%;
 			color: var(--text-2-dark);
 			// display: flex;
 			// color: red;
+			-webkit-filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
+			filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
 		}
 	}
 
@@ -391,6 +426,22 @@ $article-card-hover-brightness: 30%;
 		}
 		h3{
 			font-size: 1em;
+		}
+	}
+
+	.article-total-articles{
+		@extend .article-time-box;
+		transform: translateY(0px);
+		// opacity: .5;
+		opacity: calc(var(--is-article-hovered, 0.8) * 1.0);
+		border-bottom-left-radius: 20px;
+		// border-top-left-radius: 20px;
+		span, svg{
+			display: inline-block;
+			-webkit-filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
+			filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
+			font-weight: bold;
+			font-size: 1.5em;
 		}
 	}
 
