--- a/layouts/partials/articles/article-card-complex.html
+++ b/layouts/partials/articles/article-card-complex.html
@@ -15,9 +15,30 @@
         {{- /*  <img class="ls-is-cached lazyloaded card__img" data-src="{{$article_cover_url}}" src="/en/galleries/art/3d/images/408seijin-3dfanart-comparison.png">  */ -}}
         {{- /*  <h1>ALEGRIMETRO</h1>  */ -}}
 
-        {{ partial "articles/article-time-box" . }}
+        {{- if .IsSection -}}
+            {{- $_title := T "articlesCount" (len .Pages) -}}
+            <span class="article-total-articles" title={{$_title}}>
+                {{- /*  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor">  */ -}}
+                <svg xmlns="http://www.w3.org/2000/svg" height="35px" viewBox="0 -960 960 960" width="35px" fill="currentColor">
+                    <title>{{$_title}}</title>
+                    <path d="M260-320q47 0 91.5 10.5T440-278v-394q-41-24-87-36t-93-12q-36 0-71.5 7T120-692v396q35-12 69.5-18t70.5-6Zm260 42q44-21 88.5-31.5T700-320q36 0 70.5 6t69.5 18v-396q-33-14-68.5-21t-71.5-7q-47 0-93 12t-87 36v394Zm-40 118q-48-38-104-59t-116-21q-42 0-82.5 11T100-198q-21 11-40.5-1T40-234v-482q0-11 5.5-21T62-752q46-24 96-36t102-12q58 0 113.5 15T480-740q51-30 106.5-45T700-800q52 0 102 12t96 36q11 5 16.5 15t5.5 21v482q0 23-19.5 35t-40.5 1q-37-20-77.5-31T700-240q-60 0-116 21t-104 59ZM280-494Z"/>
+                </svg>
+                <span title= {{$_title}}>&nbsp;x{{(len .Pages) }}</span>
+            </span>
+        {{- else -}}
+            {{ partial "articles/article-time-box" . }}
+        {{- end -}}
         {{- /*  {{ partial "articles/article-time-simple" . }}  */ -}}
 
+        {{- if .IsSection -}}
+        {{- /*  <span class="articles-count">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor">
+                <title>{{T "articlesCount" (len .Pages) }}</title>
+                <path d="M260-320q47 0 91.5 10.5T440-278v-394q-41-24-87-36t-93-12q-36 0-71.5 7T120-692v396q35-12 69.5-18t70.5-6Zm260 42q44-21 88.5-31.5T700-320q36 0 70.5 6t69.5 18v-396q-33-14-68.5-21t-71.5-7q-47 0-93 12t-87 36v394Zm-40 118q-48-38-104-59t-116-21q-42 0-82.5 11T100-198q-21 11-40.5-1T40-234v-482q0-11 5.5-21T62-752q46-24 96-36t102-12q58 0 113.5 15T480-740q51-30 106.5-45T700-800q52 0 102 12t96 36q11 5 16.5 15t5.5 21v482q0 23-19.5 35t-40.5 1q-37-20-77.5-31T700-240q-60 0-116 21t-104 59ZM280-494Z"/>
+            </svg>
+            <span title= {{T "articlesCount" (len .Pages) }}>&nbsp; x{{(len .Pages) }}</span>
+        </span>  */ -}}
+        {{- else -}}
         <span class="reading-time">
             {{- /*  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -890 950 950" fill="currentColor"><path d="M440-278v-394q-41-24-87-36t-93-12q-36 0-71.5 7T120-692v396q35-12 69.5-18t70.5-6q47 0 91.5 10.5T440-278Zm40 118q-48-38-104-59t-116-21q-42 0-82.5 11T100-198q-21 11-40.5-1T40-234v-482q0-11 5.5-21T62-752q46-24 96-36t102-12q74 0 126 17t112 52q11 6 16.5 14t5.5 21v418q44-21 88.5-31.5T700-320q36 0 70.5 6t69.5 18v-481q15 5 29.5 11t28.5 14q11 5 16.5 15t5.5 21v482q0 23-19.5 35t-40.5 1q-37-20-77.5-31T700-240q-60 0-116 21t-104 59Zm140-240v-440l120-40v440l-120 40Zm-340-99Z"/></svg>  */ -}}
             {{- /*  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -890 1050 1050" fill="currentColor"><path d="M440-278v-394q-41-24-87-36t-93-12q-36 0-71.5 7T120-692v396q35-12 69.5-18t70.5-6q47 0 91.5 10.5T440-278Zm40 118q-48-38-104-59t-116-21q-42 0-82.5 11T100-198q-21 11-40.5-1T40-234v-482q0-11 5.5-21T62-752q46-24 96-36t102-12q74 0 126 17t112 52q11 6 16.5 14t5.5 21v418q44-21 88.5-31.5T700-320q36 0 70.5 6t69.5 18v-481q15 5 29.5 11t28.5 14q11 5 16.5 15t5.5 21v482q0 23-19.5 35t-40.5 1q-37-20-77.5-31T700-240q-60 0-116 21t-104 59Zm140-240v-440l120-40v440l-120 40Zm-340-99Z"/></svg>  */ -}}
@@ -28,13 +49,17 @@
             {{- /*  <p>{{.ReadingTime | T "minutesCount" }}</p>  */ -}}
             <span>{{.ReadingTime | T "minutesCount" }}</span>
         </span>
+        {{- end -}}
         <div class="article-info">
             {{ $title := .Title }}
             {{ if .Params.featured_title }}
                 {{ $title = .Params.featured_title }}
             {{ end }}
 
+            {{- /*  {{ $description := .Params.Description }}  */ -}}
             {{ $description := .Params.Description }}
+            {{ $description = replaceRE "\\[\\*\\*(.*?)\\*\\*\\]\\([^)]*\\)" "**$1**" $description }}
+            {{- /*  {{ $description | markdownify }}  */ -}}
             {{ if .Params.featured_description }}
                 {{ $description = .Params.featured_description }}
             {{ end }}
