title-articles-list (counts articles)

--- a/layouts/articles/list.html
+++ b/layouts/articles/list.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
-  {{ partial "title.html" . }}
+  {{- /*  {{ partial "title.html" . }}  */ -}}
+  {{ partial "title-articles-list.html" . }}
   <section class="galleries">
     {{ range where .Pages "Params.private" "ne" true }}
       {{/*  {{ partial "album-card.html" . }}  */}}
