--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -443,6 +443,7 @@ sup.total-articles{
 		padding: .4em;
 		// border-top-left-radius: 20px;
 		span, svg{
+			color: var(--text-1-dark);
 			display: inline-block;
 			-webkit-filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
 			filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
