--- a/layouts/partials/articles-right-bar.html
+++ b/layouts/partials/articles-right-bar.html
@@ -19,11 +19,8 @@
 		{{- /*  <img id="articles-pfp" src="{{.Site.Params.articles_pfp_image}}">  */ -}}
 		
 		{{- /*  {{- $pfp_resource := .Site.Resources.Get .Site.Params.articles_pfp_image -}}  */ -}}
-		{{- $pfp_resource := resources.Get .Site.Params.articles_pfp_image -}}
-		{{- if not $pfp_resource -}}
-			{{- errorf "%s not found in 'assets' folder" .Site.Params.articles_pfp_image -}}
-		{{- end -}}
-		{{- $pfp_resource = $pfp_resource.Filter (images.Process "fit 250x250") -}}
+
+		{{- $pfp_resource := partial "articles/get-article-pfp.html" . -}}
 		<img id="articles-pfp" src="{{$pfp_resource.RelPermalink}}">
 		
 		{{/*  <h2>Patrick</h2>  */}}
