--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -57,6 +57,11 @@
 	display: inline-block;
 }
 
+.filter-shadow{
+	-webkit-filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
+	filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
+}
+
 .no-box-shadow{
 	box-shadow: none !important;
 }
@@ -121,10 +126,10 @@
 }
 
 .half-border-radius{
-	border-radius: 50%;
+	border-radius: 50% !important;
 	overflow: hidden;
 	& > * {
-		border-radius: 50%;
+		border-radius: 50% !important;
 	}
 }
 
