--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -177,7 +177,8 @@ Useful for adding notes, or whatever.
 	</div>
 	{{- end -}}
 
-	<audio id={{$audio_id}} controls  {{$autoplay | safeHTML}} preload="{{ .Get "preload" | default "metadata" }}">
+	{{- /*  <audio id={{$audio_id}} controls  {{$autoplay | safeHTML}} preload="{{ .Get "preload" | default "metadata" }}">  */ -}}
+	<audio id={{$audio_id}} controls  {{$autoplay | safeHTMLAttr}} preload="{{ .Get "preload" | default "metadata" }}">
 	<source src="{{ $audio_resource.RelPermalink }}" type="audio/mpeg">
 	{{- /*  {{ with .Get "caption" }}<figcaption>{{ . }}</figcaption>{{ end }}  */ -}}
 	<figcaption>{{- T "captionAudio" (dict "title" $title "author" $artist) -}}</figcaption>
