--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -146,7 +146,9 @@ Useful for adding notes, or whatever.
 
 {{- /*  JSON Subtitles file  */ -}}
 {{- $audio_name := index (split $audio_resource.Name ".") 0 -}}
+{{- $rand_id := mod (now.UnixNano) 1000001 -}}
 {{- $safe_js_audioname := replace (replace $audio_name "-" "_") " " "_" }}
+{{- $safe_js_audioname = printf "%s%d" $safe_js_audioname $rand_id }}
 {{- $json_file_name := printf "%s.json" $audio_name -}}
 {{- $json_resource := .Page.Resources.GetMatch $json_file_name -}}
 {{- $json := "" -}}
@@ -178,7 +180,6 @@ Useful for adding notes, or whatever.
 	</div>
 	{{- end -}}
 
-	{{- /*  <audio id={{$audio_id}} controls  {{$autoplay | safeHTML}} preload="{{ .Get "preload" | default "metadata" }}">  */ -}}
 	<audio id={{$audio_id}} controls  {{$autoplay | safeHTMLAttr}} preload="{{ .Get "preload" | default "metadata" }}">
 	<source src="{{ $audio_resource.RelPermalink }}" type="audio/mpeg">
 	{{- /*  {{ with .Get "caption" }}<figcaption>{{ . }}</figcaption>{{ end }}  */ -}}
@@ -190,11 +191,13 @@ Useful for adding notes, or whatever.
 {{- /*  Subtitles script  */ -}}
 {{- if $json_resource -}}
 <script>
-    const audio = document.getElementById({{$audio_id}});
-    const display = document.getElementById({{$display_id}});
-
-    audio.addEventListener("timeupdate", () => {
-      const currentTime = audio.currentTime;
+	{{$audio_var := $audio_id | safeJS }}
+	{{$display_var := $display_id | safeJS }}
+    const {{$audio_var}} = document.getElementById({{$audio_id}});
+    const {{$display_var}} = document.getElementById({{$display_id}});
+	{{$currentTimeVar := (printf "current_time_%s_%s" $audio_id $display_id) | safeJS -}}
+    {{$audio_var}}.addEventListener("timeupdate", () => {
+      const {{$currentTimeVar}} = {{$audio_var}}.currentTime;
 
       {{- /*  if (currentTime >= 0 && currentTime < 5) {
         display.textContent = "Intro text";
@@ -219,14 +222,16 @@ Useful for adding notes, or whatever.
 		{{- if eq $is_first false }}
 			{{"else " | safeJS}}
 		{{ end -}}
-		if (currentTime >= {{$time_start_seconds}} && currentTime < {{$time_end_seconds}}) {
-			display.textContent = {{$v.Message}};
+		if ({{$currentTimeVar}} >= {{$time_start_seconds}} && {{$currentTimeVar}} < {{$time_end_seconds}}) {
+			{{- /*  display.textContent = {{$v.Message | markdownify | safeHTML }};  */ -}}
+			{{$display_var}}.innerHTML = {{$v.Message | markdownify | safeHTML }};
 		  }
 		
 	{{- end -}}
 	
 	else {
-        display.textContent = {{- $json.defaultMessage -}};
+        {{- /*  display.textContent = {{- $json.defaultMessage | markdownify -}};  */ -}}
+		{{$display_var}}.innerHTML = {{$json.defaultMessage | markdownify | safeHTML }};
       }
 
     });
