--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -25,18 +25,18 @@ Just add a file with the same name of the song, but in a .json format like:
 {
   "messages": [
     {
-      "TimeRange": "0:0-0:30",
-      "Message": "Intro (0 a 3)",
+      "timeRange": "0:0-0:30",
+      "message": "Intro (0 a 3)",
       "CssStyle": ""
     },
     {
-      "TimeRange": "0:30-1:22",
-      "Message": "Soy mensaje muy largo jajajaj no cabre seguro me cago en todo joder(20 a 30)",
+      "timeRange": "0:30-1:22",
+      "message": "Soy mensaje muy largo jajajaj no cabre seguro me cago en todo joder(20 a 30)",
       "CssStyle": ""
     },
     {
-      "TimeRange": "10-20",
-      "Message": "de 10 a 20",
+      "timeRange": "10-20",
+      "message": "de 10 a 20",
       "CssStyle": ""
     }
   ],
@@ -210,12 +210,12 @@ Useful for adding notes, or whatever.
       }  */ -}}
 	  
 	{{- range $k, $v := $json.messages -}}
-		{{- $time_start := (index (split $v.TimeRange "-") 0) -}}
-		{{- $time_end := (index (split $v.TimeRange "-") 1) -}}
+		{{- $time_start := (index (split $v.timeRange "-") 0) -}}
+		{{- $time_end := (index (split $v.timeRange "-") 1) -}}
 	  	{{- $time_start_seconds := partial "utils/get-seconds.html" $time_start -}}
 	  	{{- $time_end_seconds := partial "utils/get-seconds.html" $time_end -}}
 
-		{{- $message := $v.Message -}}
+		{{- $message := $v.message -}}
 		{{- $is_first := eq $k 0 -}}
 		{{- $is_last := eq (add $k 1) (len $json.messages) -}}
 
@@ -223,8 +223,8 @@ Useful for adding notes, or whatever.
 			{{"else " | safeJS}}
 		{{ end -}}
 		if ({{$currentTimeVar}} >= {{$time_start_seconds}} && {{$currentTimeVar}} < {{$time_end_seconds}}) {
-			{{- /*  display.textContent = {{$v.Message | markdownify | safeHTML }};  */ -}}
-			{{$display_var}}.innerHTML = {{$v.Message | markdownify | safeHTML }};
+			{{- /*  display.textContent = {{$v.message | markdownify | safeHTML }};  */ -}}
+			{{$display_var}}.innerHTML = {{$v.message | markdownify | safeHTML }};
 		  }
 		
 	{{- end -}}
