--- a/assets/css/shortcodes/audio.scss
+++ b/assets/css/shortcodes/audio.scss
@@ -78,8 +78,11 @@ figure.audio-player{
 		height: 100px;
 		align-self: flex-start;
 		//box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
-		box-shadow: rgba(0, 0, 0, 0.93) 0px 5px 28px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
-
+		
+		// box-shadow: rgba(0, 0, 0, 0.93) 0px 5px 28px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+		box-shadow: none;
+		-webkit-filter: drop-shadow(0px 5px 6px rgba(0, 0, 0, 0.83));
+		filter: drop-shadow(0px 5px 6px rgba(0, 0, 0, 0.83));
 		@media (max-width: 350px) {
 			display: none;
 		}
@@ -150,7 +153,7 @@ figure.audio-player{
 	.audio-subtitles {
 		p{
 			text-align: center;
-			font-weight: bold;
+			// font-weight: bold;
 			font-size: 1.1rem;
 			color: var(--text-1-dark);
 			// &::before{
