--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -61,11 +61,14 @@ Useful for adding notes, or whatever.
 {{- $autoplay_flag := (or (.Get 7) (.Get "autoplay")) | default false -}}
 {{- $border_radius := (or (.Get 8) (.Get "radius") (.Get "r")) | default false -}}
 
-{{- $audio_resource := .Page.Resources.Get $audio_path -}}
+{{- $audio_resources := .Page.Resources.ByType "audio" -}}
+{{- $image_resources := .Page.Resources.ByType "image" -}}
+
+{{- $audio_resource := $audio_resources.GetMatch (printf "**%s**" $audio_path) -}}
 {{- if not $audio_resource -}}
 	{{- errorf "Audio shortcode: audio file ('%s') not found at '%s' with Title '%s'" $audio_path .Page.Path .Page.Name -}}
 {{- end -}}
-{{- $cover_resource := .Page.Resources.Get $cover_path -}}
+{{- $cover_resource := $image_resources.GetMatch (printf "**%s**" $cover_path) -}}
 {{- if and (not $cover_resource) $cover_path -}}
 	{{- warnf "Audio shortcode: Cover ('%s') not found at '%s' with Title '%s'" $cover_path .Page.Path .Page.Name -}}
 {{- end -}}
@@ -106,10 +109,12 @@ Useful for adding notes, or whatever.
 {{- /*  {{- $cover_resource = $cover_resource.Filter (images.Saturation -100) -}}  */ -}}
 {{- if and $cover_resource $optimize_cover_image -}}
 	{{- /*  {{- $cover_resource = $cover_resource.Filter (images.Process "fit 500x500") -}}  */ -}}
-	{{- $cover_resource = $cover_resource.Filter (images.Process "fit 250x250") -}}
 	
 	{{- /*  Warnings for gif/webp loosing its animation when being optimized  */ -}}
 	{{- $cover_resource_extension := $cover_resource.MediaType.FirstSuffix.Suffix -}}
+	{{- if and (ne $cover_resource_extension "gif") (ne $cover_resource_extension "webp") -}}
+		{{- $cover_resource = $cover_resource.Filter (images.Process "fit 250x250") -}}
+	{{- end -}}
 	{{- if eq $cover_resource_extension "gif" -}}
 		{{- warnf "Audio shortcode: extension is ('%s'). If you want it to be animated you may want to set 'optimize=false'" $cover_resource_extension -}}
 	{{- else if eq $cover_resource_extension "webp" -}}
