--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -24,6 +24,8 @@
 
 <pre>Languages: {{ .Site.Languages }}</pre>
 <pre>🦜.Site.Language.LanguageName = {{.Site.Language.LanguageName}}</pre>
+<pre>🦜.Site.Language.Lang = {{ .Site.Language.Lang }}</pre>
+<pre>🦜.Page.Language = {{ .Page.Language }}</pre>
 <pre>.IsTranslated = {{.IsTranslated}}</pre>
 <pre>.Permalink: {{ .Permalink }}</pre>
 <pre>.RelPermalink: {{ .RelPermalink }}</pre>
