--- a/layouts/shortcodes/audio.html
+++ b/layouts/shortcodes/audio.html
@@ -164,6 +164,9 @@ Useful for adding notes, or whatever.
 {{- $audio_id := printf "%s_audio" $safe_js_audioname -}}
 {{- $display_id := printf "%s_display" $safe_js_audioname -}}
 
+{{- $_is_spanish := eq $.Page.Language.Lang "es" -}}
+
+
 <figure class="audio-player" style="{{$style | safeCSS}}">
 	<div>
 		{{- if $cover_resource -}}
@@ -181,7 +184,11 @@ Useful for adding notes, or whatever.
 	{{- if $json_resource -}}
 	<div class="audio-subtitles">
 		<svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3"><path d="M80-80v-720q0-33 23.5-56.5T160-880h440q33 0 56.5 23.5T680-800v17q-24 11-44 27t-36 36v-80H160v527l47-47h393v-160q16 20 36 36t44 27v97q0 33-23.5 56.5T600-240H240L80-80Zm160-320h160v-80H240v80Zm520-80q-50 0-85-35t-35-85q0-50 35-85t85-35q11 0 21 2t19 5v-207h160v80h-80v240q0 50-35 85t-85 35Zm-520-40h280v-80H240v80Zm0-120h280v-80H240v80Zm-80 320v-480 480Z"/></svg>
-		<p id={{$display_id}}>{{$json.startMessage}}</p>
+		{{- $_subtitles_start_message := $json.startMessage -}}
+		{{- if and $_is_spanish $json.startMessageEs -}}
+			{{- $_subtitles_start_message = $json.startMessageEs -}}
+		{{- end -}}
+		<p id={{$display_id}}>{{$_subtitles_start_message}}</p>
 	</div>
 	{{- end -}}
 
@@ -221,7 +228,6 @@ Useful for adding notes, or whatever.
 	  	{{- $time_end_seconds := partial "utils/get-seconds.html" $time_end -}}
 
 		{{- $message := $v.message -}}
-		{{- $_is_spanish := eq $.Page.Language.Lang "es" -}}
 		{{- if and $_is_spanish ($v.messageEs) }}
 			{{- $message = $v.messageEs -}}
 		{{- end -}}
@@ -241,7 +247,12 @@ Useful for adding notes, or whatever.
 	
 	else {
         {{- /*  display.textContent = {{- $json.defaultMessage | markdownify -}};  */ -}}
-		{{$display_var}}.innerHTML = {{$json.defaultMessage | markdownify | safeHTML }};
+		{{- $_default_message := $json.defaultMessage -}}
+		{{- if and $_is_spanish ($json.defaultMessageEs) }}
+			{{- $_default_message = $json.defaultMessageEs -}}
+		{{- end -}}
+
+		{{$display_var}}.innerHTML = {{$_default_message | markdownify | safeHTML }};
       }
 
 });
