refactor bloom-shadow to bloom-shadow-text

--- a/assets/css/albums.scss
+++ b/assets/css/albums.scss
@@ -233,7 +233,7 @@ section.featured{
 	// h2{
 	h2{
 		// @extend .bloom-box-shadow-album-card;
-		// @extend .bloom-shadow;
+		// @extend .bloom-shadow-text;
 		transition-duration: .6s;
 
 		text-shadow: $text-shadow-values2;
