--- a/layouts/partials/profile_resume.html
+++ b/layouts/partials/profile_resume.html
@@ -1,6 +1,6 @@
   <hgroup class="profile-resume">
     {{- /*  {{ if .Title }}
-      <h2 class="bloom-shadow">{{ .Title }}</h2>
+      <h2 class="bloom-shadow-text">{{ .Title }}</h2>
     {{ end }}
 
     <a href='{{ ref . "about" }}'>
