--- a/layouts/shortcodes/header.html
+++ b/layouts/shortcodes/header.html
@@ -13,7 +13,7 @@ Arguments:
 Use example:
 {{< header "my-first-article, another-article" >}}
 {{< header "my-first-article, another-article" "My favourite articles" 3 "left" >}}
-{{< header title="my-first-article, another-article" title="My favourite articles" align="right" class="bloom-shadow" >}}
+{{< header title="my-first-article, another-article" title="My favourite articles" align="right" class="bloom-shadow-text" >}}
 */ -}}
 
 {{- $title := or (.Get 0) (.Get "text") (.Get "t") -}}
