--- a/layouts/shortcodes/text_strong.html
+++ b/layouts/shortcodes/text_strong.html
@@ -33,7 +33,7 @@ spin = (float) Spin multiplicator. Default: 1.0 (1 perfect turn)
 
 {{- $chars := split $text "" -}}
 
-{{- $css_class := "bloom-shadow" -}}
+{{- $css_class := "bloom-shadow-text" -}}
 
 {{- $font_weight_property := printf "--text-weight:%s" $font_weight -}}
 {{- if eq $font_weight 1 -}}
