--- a/assets/css/articles.scss
+++ b/assets/css/articles.scss
@@ -45,7 +45,7 @@ sup.total-articles{
 		border-left: 5px solid $main_color;
 		box-shadow: rgba(0, 0, 0, 0.35) 1.95px 4px 5.6px;
 
-		// @extend .bloom-shadow;
+		// @extend .bloom-shadow-text;
 		// color: $main_color;
 
 		& .hover-underline-animation::after {
@@ -203,7 +203,7 @@ sup.total-articles{
 
 		// filter: blur(5px);
 
-		// @extend .bloom-shadow;
+		// @extend .bloom-shadow-text;
 		// color: $main_color;
 
 		transform: rotateZ(var(--rand-rotation, 0));
