added element CSS style option for the <figure>

--- a/layouts/shortcodes/img_caption.html
+++ b/layouts/shortcodes/img_caption.html
@@ -9,6 +9,7 @@ url = (string) Add an url to open when clicking the image. Default: ""
 page = (string) Page to open when clicking the image. Default: ""
 italic = (bool) If true, caption will be in italics. Default: true
 class = (string) Class (or classes) for the <img> element. Tip: use the class 'no-box-shadow' if you want the img to NOT have the shadow around it.
+style = (string) CSS style for the <figure> element. Default: ""
 Usage:
 {{< img_caption img="dexter.png" caption="My best friend" italic=false alt="Picture of a cute dog" >}}
 */ -}}
@@ -19,6 +20,7 @@ Usage:
 {{- $url := or (.Get "url") (.Get 3) | default "" -}}
 {{- $page_name := or (.Get "page") (.Get 3) | default "" -}}
 {{- $italic := (.Get "italic") | default true -}}
+{{- $element_style := (.Get "style") | default "" -}}
 {{- $img_class := (.Get "class") -}}
 
 {{- $a_link := $url }}
@@ -52,7 +54,7 @@ Usage:
 {{- if $italic -}}
 	{{- $tag = "em" | safeHTMLAttr -}}
 {{- end -}}
-<figure class="figure-caption">
+<figure class="figure-caption" {{- with $element_style}} style="{{. | safeCSS}}"{{end}}>
 	{{- if $a_link -}}<a class="img-link" target="_blank" rel="noopener noreferrer" href="{{$a_link}}">{{- end -}}
 	{{- /*  <img {{ with $img_class }} class="{{.}}"{{- end -}} src="{{- $img_url -}}" loading="lazy" width="{{$image_resource.Width}}" height="{{$image_resource.Height}}" alt="{{$alt_text}}">  */ -}}
 	<img {{ with $img_class }} class="{{.}}"{{- end -}} src="{{- $img_url -}}" loading="lazy" {{with $image_resource}}width="{{.Width}}" height="{{.Height}}"{{end}} alt="{{$alt_text}}">
