--- a/assets/css/utility-classes.scss
+++ b/assets/css/utility-classes.scss
@@ -75,6 +75,11 @@
 	filter: drop-shadow( 1px 2px 2px rgba(0, 0, 0, .99));
 }
 
+.filter-shadow-big{
+	-webkit-filter: drop-shadow(0px 4px 8px rgba(0,0,0,0.75));
+	filter: drop-shadow(0px 4px 8px rgba(0,0,0,0.75));
+}
+
 .no-box-shadow{
 	box-shadow: none !important;
 }
