debug details box

--- a/layouts/partials/debug.html
+++ b/layouts/partials/debug.html
@@ -1,5 +1,8 @@
 {{/*  Partial for debugging  */}}
 <div class="debug">
+<details name="debug" title="Debug information" title="Debug detils">
+<summary>Debug data/info</summary>
+
 <h1 class="accent-color super-bold">---------------------- [Debug Code] ----------------------</h1>
 <pre class="super-bold">❗ Don't forget to turn 'false' the `is_debug` flag in `hugo.toml` ❗</pre>
 {{$template_type := "list.html"}}
@@ -61,6 +64,7 @@
 </li>
 {{ end }}
 
+</details>
 <hr class="full-separator">
 <hr class="full-separator">
 </div>
