--- a/layouts/partials/albums/gallery-resources-frontmatter.html
+++ b/layouts/partials/albums/gallery-resources-frontmatter.html
@@ -2,6 +2,8 @@
 
 {{ $images := partial "albums/album-get-non-hidden-images" . }}
 
+<details>
+<summary>Resources data (for copying)</summary>
 
 <code>
 resources:
@@ -25,3 +27,6 @@ resources:
 {{ end }}
 
 </code>
+</details>
+
+&nbsp;
