--- a/layouts/partials/utils/get-galleries-with-tag.html
+++ b/layouts/partials/utils/get-galleries-with-tag.html
@@ -4,9 +4,7 @@ Arguments: dict("tag" $tag_name) = Page from which it will get the .Section
 
 Use:
 {{ partial "utils/get-galleries-with-tag.html" $tag_name }}
-.tag
-
-
+{{ partial "utils/get-galleries-with-tag.html" "art" }}
 */}}
 
 
